styles.css
@import url("https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap");
* {
  /* padding: 0.5rem 0.5rem; */
  margin: 0;
  padding: 0;
  font-family: "Scheherazade New", serif;
}
.section {
  background-color: #12475f;
  color: #ffffff;
  line-height: 1.6;
  text-align: center;
}
.container-1 {
  max-width: 960px;
  margin: auto;
  padding: 0 30px;
}
#showcase {
  height: 300px;
}
#showcase h1 {
  font-size: 50px;
  line-height: 1.3;
  position: relative;
  animation: heading;
  animation-duration: 3s;
  animation-fill-mode: forwards;
}
#content {
  position: relative;
  animation-name: content;
  animation-duration: 3s;
}
.btn {
  color: #ffffff;
  text-decoration: none;
  padding: 1rem 2rem;
  border: #fff 1px solid;
  margin-top: 20px;
  margin-bottom: 40px;
  display: inline-block;
  opacity: 0;
  animation-name: btn;
  animation-duration: 3s;
  animation-delay: 3s;
  animation-fill-mode: forwards;
  transition-property: transform;
  transition-duration: 1s;
}
/* card-1 bg color starts  */
.cd-bg {
  /* margin-top: 1rem; */
  height: 40vh;
  color: #fff;
  background: #12475f;
  position: relative;
  bottom: -1rem;
}
.head-items {
  /* display: flex;
  flex-direction: row;
  flex: auto; */
  display: grid;
  grid-template-columns: 18fr 1fr;
  padding: 1rem 1rem;
}

/* card-1 bg color ends  */
/* animation starts here for section */
@keyframes heading {
  0% {
    top: -50px;
  }
  100% {
    top: 240px;
  }
}
@keyframes content {
  0% {
    left: -1000px;
  }
  100% {
    left: 0px;
  }
}
@keyframes btn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.btn:hover {
  transform: rotateY(180deg);
}
/* animation ends here for section */
.card-1 img {
  height: 10rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 0;
}
.card-2 {
  padding-top: 2rem;
  padding: 0.5rem 0.5rem;
  border-radius: none;
}
.card-1 {
  padding: 2rem 2rem;
  /* padding-bottom: 5rem; */
  position: relative;
  top: -10rem;
}
.card-1 .card {
  border-radius: 0;
  border-top: none;
  border-right: none;
  border-bottom: none;
}
.card-1 .card:hover {
  /* z-index: 10000; */
  bottom: 1.5rem;
  border: 2px solid grey;
  color: #000 !important;
}
.card-2 img {
  height: 10rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 0;
}
.card-2 .card {
  border-radius: 0;
  border-top: none;
  border-right: none;
  border-bottom: none;
}
.card-2 .card-title {
  color: silver;
  font-weight: bolder;
  text-align: center;
  padding-top: 0;
  padding-bottom: 0;
  margin-bottom: 0;
}
.card-1 .card-title {
  color: silver;
  font-weight: bolder;
  text-align: center;
  padding-top: 0;
  padding-bottom: 0;
  margin-bottom: 0;
}
.card-2 .card-text {
  padding-top: 0;
  margin-top: 0;
}
.navbar .nav-item .nav-link {
  align-items: center;
  text-align: center;
  position: relative;
  padding: 0 5rem;
  margin: 0;
  margin-left: 5rem;
  font-size: 1.5rem;
  color: #f4f4f4 !important;
  font-weight: bolder;
}
.navbar-brand i {
  font-size: 3rem;
  color: #ffffff;
  padding-left: 4rem;
}
.navbar {
  background: #12475f;
  margin-bottom: 2rem;
}
.heading {
  top: -11rem;
  align-items: center;
  color: #fff;
  border: 1px solid silver;
  display: inline-block;
  margin-left: 25rem;
  position: relative;
  z-index: 10000;
}
.box {
  /* width: 10rem;
  height: 10rem; */
  background: #84e4e4;
}
.box-1 {
  /* width: 10rem;
  height: 10rem; */
  background: #636363;
}
.box-2 {
  width: 10rem;
  height: 10rem;
  background: #000;
}
.box-3 {
  width: 10rem;
  height: 10rem;
  background: lightcoral;
  animation-name: my;
  position: relative;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}
/* This is for changing color on selection of text on browser */
.container-1 > p::selection {
  background: lightgreen;
  color: #000;
}
#showcase > h1::selection {
  background: lightgreen;
  color: #000;
}
@keyframes my {
  0% {
    background: white;
    left: 0px;
    top: 0px;
  }
  25% {
    background: red;
    left: 300px;
    top: 0px;
    border-radius: 1rem;
  }
  50% {
    background: green;
    left: 300px;
    top: 300px;
    border-radius: 3rem;
  }
  75% {
    background: yellow;
    left: 0px;
    top: 300px;
    border-radius: 6rem;
  }
  100% {
    background: lightcoral;
    left: 0px;
    top: 0px;
    border-radius: 10rem;
  }
}
.box-4 {
  width: 10rem;
  height: 10rem;
  background: lightgreen;
}
.box-5 {
  width: 10rem;
  height: 10rem;
  background: lightpink;
  transition-property: background, border-radius, transform;
  transition-duration: 2s;
}
.box-5:hover {
  background: red;
  border-radius: 6rem;
  transform: rotateY(180deg);
}
.box-6 {
  width: 10rem;
  height: 10rem;
  background: lightskyblue;
  border: 4px solid grey;
}
.main-box {
  display: grid;
  grid-template-columns: 60% 30%;
  grid-gap: 3rem;
}
/* scrollbar css starts here */
.scrollbar {
  left: 30rem;
  padding: 20px 20px;
  position: relative;
  width: 26rem;
  height: 20rem;
  color: #fff;
  text-align: center;
  background: #12475f;
  border: 1px solid silver;
  overflow: auto;
  margin-bottom: 5rem;
}
#scrollbar::-webkit-scrollbar-track {
  border-radius: 10px;
  background: #f5f5f5;
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
#scrollbar::-webkit-scrollbar-thumb {
  width: 10px;
  background: linear-gradient(green, yellow);
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
/* linear-gradiant styles starts here */
.linear-gradiant {
  height: 50vh;
  background: linear-gradient(to top right, #ff6f69 50%, #ffcc5c 50%);
  margin-bottom: 1rem;
}
.linear-gradiant-1 {
  height: 50vh;
  background: linear-gradient(45deg, #ffcc5c 33%, rgba(0, 0, 0, 0.6) 35%),
    url(https://c1.wallpaperflare.com/preview/171/852/28/keyboard-coffee-desk-monitor.jpg);
  background-size: cover; /*to cover background we can use bg-size cover*/
  margin-bottom: 1rem;
}
.linear-gradiant-2 {
  height: 50vh;
  background: repeating-linear-gradient(
    45deg,
    #ff6f69 0%,
    #ff6f69 25%,
    #ffcc5c 25%,
    #ffcc5c 50%
  );
  margin-bottom: 1rem;
}
.linear-gradiant-3 {
  height: 100vh;
  background: repeating-linear-gradient(
    45deg,
    #ff6f69 0%,
    #ff6f69 5%,
    #ffcc5c 5%,
    #ffcc5c 10%
  );
  margin-bottom: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  letter-spacing: 0.1rem;
}
.lg-body {
  border: 5px solid #fff;
  padding: 2rem 3rem;
  background-color: rgba(0, 0, 0, 0.2);
  color: #fff;
}
.lg-body h1 {
  font-size: 4rem;
  margin-bottom: 0.75rem;
}
.lg-body p {
  font-size: 1.75rem;
}
/* for using image darker we use rgba with 4 value */
/* linear-gradiant styles ends here */

/* Image filter examples starts here */
.img-filter-examples > img {
  max-height: 80vh;
  padding: 1rem 1rem;
  /* filter: contrast(200%); */
  /* filter: brightness(90%); */
  /* filter: drop-shadow(-8px, -8px, 5px red); */
  /* filter: grayscale(50%); */
  /* filter: hue-rotate(50deg); */
  /* filter: invert(10%); */
  /* filter: opacity(100%); */
  filter: sepia(500%);
}
/* Image filter examples ends here */

